tests/snapshots/tests__run@stress_tests__all_tree.hvm.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/stress_tests/all_tree.hvm
---
(a (* a))
RWTS   :     822_083_556
- ANNI :     402_653_168
- COMM :      83_886_075
- ERAS :     117_440_507
- DREF :     184_549_375
- OPER :      33_554_431
