tests/snapshots/tests__run@stress_tests__apelacion.hvm.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/stress_tests/apelacion.hvm
---
#31999968000000
RWTS   :   1_524_001_905
- ANNI :     635_000_952
- COMM :     254_000_063
- ERAS :     127_000_254
- DREF :     254_000_319
- OPER :     254_000_317
