tests/snapshots/tests__run@stress_tests__boom.hvmc.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/stress_tests/boom.hvmc
---
(a (* a))
RWTS   :     134_217_907
- ANNI :      33_554_556
- COMM :      67_108_895
- ERAS :      16_777_216
- DREF :      16_777_240
- OPER :               0
