tests/snapshots/tests__run@stress_tests__burn.hvmc.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/stress_tests/burn.hvmc
---
(a b)
RWTS   :      92_274_181
- ANNI :      50_331_316
- COMM :              66
- ERAS :      16_777_138
- DREF :      25_165_661
- OPER :               0
