tests/snapshots/tests__run@stress_tests__sum_rec.hvmc.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/stress_tests/sum_rec.hvmc
---
#67108864
RWTS   :   1_140_850_678
- ANNI :     469_762_043
- COMM :      67_108_863
- ERAS :     134_217_727
- DREF :     268_435_455
- OPER :     201_326_590
