tests/snapshots/tests__run@stress_tests__sum_tail.hvm.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/stress_tests/sum_tail.hvm
---
#49999995000000
RWTS   :     120_000_009
- ANNI :      50_000_004
- COMM :      20_000_000
- ERAS :      10_000_001
- DREF :      20_000_003
- OPER :      20_000_001
