tests/snapshots/tests__run@stress_tests__sum_tree.hvm.snap
---
source: tests/tests.rs
expression: output
input_file: tests/programs/stress_tests/sum_tree.hvm
---
#16777216
RWTS   :     771_751_906
- ANNI :     369_098_738
- COMM :      83_886_075
- ERAS :     100_663_292
- DREF :     167_772_155
- OPER :      50_331_646
